# cargo-swagger

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
src/: main.rs
