[package]
authors = [
    "Metaswitch Networks Ltd",
]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
description = "A cargo subcommand to make it easy to generate Rust cratyes from swagger specs"
homepage = "https://github.com/Metaswitch/cargo-swagger"
keywords = ["swagger"]
license = "Apache-2.0/MIT"
name = "cargo-swagger"
readme = "README.md"
repository = "https://github.com/Metaswitch/cargo-swagger"
version = "0.1.0"

[badges]
travis-ci = { repository = "Metaswitch/cargo-swagger", branch = "master" }

[dependencies]
docopt = "0.8.3"
error-chain = "0.11.0"
serde = "1.0.126"
serde_derive = "1.0.38"
serde_yaml = "0.7.3"
